Require graph ETags for OpenView commands
